--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,14 +1,16 @@
 @import './variables.scss';
 @import './mixins.scss';
-@import './../../assets/materialize-src/sass/materialize.scss';
+@import './mediaQ.scss';
+
 .header {
-    min-height: 90vh;
+    min-height: 94vh;
     background: url('https://images.pexels.com/photos/21694/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=750&w=1260') no-repeat;
     background-position: left;
     background-color: black;
     display: flex;
     justify-content: flex-end;
     align-content: center;
+    margin-top: -64px;
     &__title {
         height: 90vh;
         display: flex;
@@ -21,6 +23,38 @@
             font-weight: bold;
         }
         &--icon {
+            &-phone {
+                animation-name: iconPhoneAnimation;
+                animation-duration: 3s;
+                animation-iteration-count: infinite;
+                @keyframes iconPhoneAnimation {
+                    0% {
+                        transform: rotate(0);
+                    }
+                    25% {
+                        transform: rotate(25deg);
+                    }
+                    100% {
+                        transform: rotate(0deg);
+                    }
+                }
+            }
+            &-location {
+                animation-name: iconLocationAnimation;
+                animation-duration: 3s;
+                animation-iteration-count: infinite;
+                @keyframes iconLocationAnimation {
+                    0% {
+                        transform: scale(1);
+                    }
+                    25% {
+                        transform: scale(1.2);
+                    }
+                    100% {
+                        transform: scale(1);
+                    }
+                }
+            }
             &-text {
                 color: $header-text-color;
                 font-weight: bold;
@@ -29,21 +63,8 @@
     }
 }
 
-@media #{$small-and-down} {
-    .header {
-        background-position: center;
-        justify-content: center;
-        &__title {
-            margin: 0;
-            &--text {
-                font-size: 3rem;
-            }
-        }
-    }
-}
-
 .about {
-    padding: 20px 0;
+    padding: 60px 0;
     &__header {
         &--title {
             font-weight: bold;
@@ -61,32 +82,34 @@
 }
 
 .gallery {
-    background-color: #000000;
+    padding: 50px 0;
+    &__indicator {
+        position: relative;
+        top: 40%;
+        &--direction {
+            border-radius: 100%;
+           &-icon {
+               font-size: 4.2rem;
+               margin: 0!important;
+           } 
+        }
+    }
     &__carousel {
         &--item {
-            width: 300px!important;
-            height: 300px!important;
+            width: 300px !important;
+            height: 300px !important;
         }
         &--modal {
             height: 100vh;
-            &-image {
-                height: 100%;
-                width: 100%;
-                display: block;
-            }
+            background-size: 100% 100%;
         }
     }
 }
 
-.contact {
-    &__cards {
-        display: flex;
-        &--data {
-            margin: 20px 20px;
-            flex-grow: 2;
-        }
-        &--hours {
-            @extend .contact__cards--data;
-        }
+.map {
+    min-height: 700px;
+    iframe {
+        display: block;
     }
 }
+
