--- a/src/scss/mediaQ.scss
+++ b/src/scss/mediaQ.scss
@@ -11,6 +11,7 @@
     .header {
         background-position: center;
         justify-content: center;
+        min-height: 80vh;
         &__title {
             margin: 0;
             &--text {
