--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,16 +3,16 @@
 @import './mediaQ.scss';
 
 .header {
-    min-height: 94vh;
+    min-height: 85vh;
+    max-height: 85vh;
     background: url('https://images.pexels.com/photos/21694/pexels-photo.jpg?auto=compress&cs=tinysrgb&h=750&w=1260') no-repeat;
     background-position: left;
     background-color: black;
     display: flex;
     justify-content: flex-end;
     align-content: center;
-    margin-top: -64px;
     &__title {
-        height: 90vh;
+        height: auto;
         display: flex;
         align-items: center;
         flex-direction: column;
