--- a/src/scss/mediaQ.scss
+++ b/src/scss/mediaQ.scss
@@ -11,7 +11,8 @@
     .header {
         background-position: center;
         justify-content: center;
-        min-height: 80vh;
+        min-height: 75vh;
+        max-height: 75vh;
         &__title {
             margin: 0;
             &--text {
@@ -26,9 +27,6 @@
         }
         &__hours {
             text-align: center;
-            &--title {
-                
-            }
         }
     }
 }
