--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,6 +21,7 @@
         &--text {
             color: $header-text-color;
             font-weight: bold;
+            font-size: 3.5rem;
         }
         &--icon {
             &-phone {
