--- a/src/scss/mediaQ.scss
+++ b/src/scss/mediaQ.scss
@@ -20,6 +20,18 @@
             }
         }
     }
+    .gallery {
+        &__carousel {
+            &--item {
+                width: 200px !important;
+                height: 200px !important;
+            }
+            &--modal {
+                width: 100% !important;
+                height: 100% !important;
+            }
+        }
+    }
     .footer {
         padding-top: 60px;
         &__contact {
