implement new carousel-slider

--- a/src/scss/mediaQ.scss
+++ b/src/scss/mediaQ.scss
@@ -21,6 +21,7 @@
         }
     }
     .gallery {
+        padding: 0;
         &__carousel {
             &--item {
                 width: 200px !important;
