--- a/src/scss/mediaQ.scss
+++ b/src/scss/mediaQ.scss
@@ -20,8 +20,14 @@
             }
         }
     }
+    .about {
+        &__header {
+            &--title {
+                font-size: 2rem;
+            }
+        }
+    }
     .gallery {
-        padding: 0;
         &__carousel {
             &--item {
                 width: 200px !important;
