--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -64,6 +64,9 @@
     }
 }
 
+#about {
+    padding-top: 56px;
+}
 .about {
     min-height: 100vh;
     display: flex;
@@ -93,10 +96,11 @@
     }
 }
 
+#gallery {
+    @extend #about;
+}
 .gallery {
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
+    padding: 20px 0;
     &__wrapper {
         display: flex;
         justify-content: center;
@@ -104,8 +108,10 @@
         border: none;
     }
     &__slides {
-        height: auto;
-        width: 600px;
+        border: #F57F17 2px solid;
+        &--image {
+            cursor: not-allowed;
+        }
     }
     &__indicator {
         margin: 0 50px;
@@ -130,9 +136,14 @@
 }
 
 .map {
+    background-image: url('https://upload.wikimedia.org/wikipedia/commons/9/95/LodzRingAutostradowy.svg');
     min-height: 700px;
     iframe {
         display: block;
     }
+}
+
+#contact {
+    padding-top: 56px;
 }
 
