--- a/src/scss/mediaQ.scss
+++ b/src/scss/mediaQ.scss
@@ -16,8 +16,8 @@
     .header {
         background-position: center;
         justify-content: center;
-        min-height: 75vh;
-        max-height: 75vh;
+        // min-height: 75vh;
+        // max-height: 75vh;
         &__title {
             margin: 0;
             &--text {
